--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,17 +7,14 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 642700035864.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=642700035864.dkr.ecr.us-east-1.amazonaws.com/bpmdemo
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG 642700035864.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker build -t bpmdemo:latest .
+      - docker tag bpmdemo:latest 642700035864.dkr.ecr.us-east-1.amazonaws.com/bpmdemo:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push 642700035864.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker push 642700035864.dkr.ecr.us-east-1.amazonaws.com/bpmdemo:latest
