--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,14 +7,22 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 642700035864.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=642700035864.dkr.ecr.us-east-1.amazonaws.com/bpmdemo
+      - IMAGE_REPO_NAME=bpmdemo
+      - IMAGE_TAG=latest
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t bpmdemo:latest .
-      - docker tag bpmdemo:latest 642700035864.dkr.ecr.us-east-1.amazonaws.com/bpmdemo:latest
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push 642700035864.dkr.ecr.us-east-1.amazonaws.com/bpmdemo:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo Writing image definitions file...
+      - printf '[{"name":"camundaawsdemocontainer","imageUri":"%s"}]' $IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
+      - cat imagedefinitions.json 
+artifacts:
+    files: imagedefinitions.json
