--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,8 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 642700035864.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=642700035864.dkr.ecr.us-east-1.amazonaws.com/bpmdemo
-      - IMAGE_REPO_NAME=bpmdemo
+      - REPOSITORY_URI=642700035864.dkr.ecr.us-east-1.amazonaws.com/camundaawsdemo
+      - IMAGE_REPO_NAME=camundaawsdemo
       - IMAGE_TAG=latest
   build:
     commands:
